# borg.mod.bch950

./: 100.BCH_BLUE  100.bch.blue  130.localbin  300.bch__user  300.monty  600.bch_vim  600.localbin  700.bch.prompt  800.bch.variables  810.bch.aliases  820.bch.functions  820.bch.poetry  830.bch_poetry_installer  830.poetry  900.bch-backup  990.bch.misc  999.named  README.md  insitu
.hide/: 050.__  060.fn0  210.bch__poetry  211.mypoetry
.insitu/: activate
bch.hack.vjot/: pyproject.toml
hide/: source:borg:deref
insitu.d/: insitu
lbin/: bch.lbin.ping-scan  bch.lbin.stat-tree  bch.misc.warn
modules/: 600.bch_vim  700.bch.prompt  800.bch.variables  810.bch.aliases
source.d/: 000.host-specific  100.direnv  300.MY_GOOGLE_DRIVE  400.bchk_cfg  500.fderef  600.bch_vim  610.bch_pi  620.bch_git  700.bch.prompt  800.bch-zot.constants  810.aliases.misc  810.bch.aliases  811.aliases.bch-zjot  812.aliases.git  pumpkin.local
